force-app/main/default/objects/Interest__c/Interest__c.object-meta.xml
<CustomObject>
    <description>Junction object to relate Accounts with Features.</description>
    <label>Interest</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Interest ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>