force-app/main/default/objects/Interest__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <description>Related Feature</description>
    <label>Feature</label>
    <referenceTo>Features__c</referenceTo>
    <relationshipLabel>Interests</relationshipLabel>
    <relationshipName>Interests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>